# cigarettes-detection

./: .env  .gitignore  README.md  main.py  pyproject.toml
output/run_20250428_145201/results/: gemini_predictions.txt
