[project]
name = "cigarettes-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.5.2",
    "easyocr>=1.7.2",
    "einops>=0.8.1",
    "google-generativeai>=0.8.4",
    "imagehash>=4.3.2",
    "inference-sdk>=0.12.0",
    "ipykernel>=6.29.5",
    "keras>=3.9.0",
    "lang-sam",
    "matplotlib>=3.10.1",
    "numpy>=2.1.3",
    "openai>=1.66.3",
    "opencv-python>=4.11.0.86",
    "pillow==10.4.0",
    "python-dotenv>=1.0.1",
    "roboflow>=1.1.58",
    "segment-anything>=1.0",
    "tensorflow>=2.19.0",
    "timm>=1.0.15",
    "torch==2.4.1",
    "torchvision==0.19.1",
    "transformers==4.44.2",
    "ultralytics>=8.3.23",
]

[tool.uv.sources]
lang-sam = { git = "https://github.com/luca-medeiros/lang-segment-anything.git" }
